Fixed nutrition label gap on right side, added text wrapping to circular charts

--- a/src/assets/grayscale.css
+++ b/src/assets/grayscale.css
@@ -139,46 +139,6 @@
     background-color: #467370 !important;
 }
 
-.about-section {
-    padding-top: 10rem;
-    background: linear-gradient(to bottom, #161616 0%, rgba(22, 22, 22, 0.9) 75%, rgba(22, 22, 22, 0.8) 100%);
-}
-
-.about-section p {
-    margin-bottom: 5rem;
-}
-
-.projects-section {
-    padding: 10rem 0;
-}
-
-.projects-section .featured-text {
-    padding: 2rem;
-}
-
-@media (min-width: 992px) {
-    .projects-section .featured-text {
-        padding: 0 0 0 2rem;
-        border-left: 0.5rem solid #64a19d;
-    }
-}
-
-.projects-section .project-text {
-    padding: 3rem;
-    font-size: 90%;
-}
-
-@media (min-width: 992px) {
-    .projects-section .project-text {
-        padding: 5rem;
-    }
-    .projects-section .project-text hr {
-        border-color: #64a19d;
-        border-width: 0.25rem;
-        width: 30%;
-    }
-}
-
 body {
     font-family: "Nunito";
     letter-spacing: 0.0625em;
@@ -192,14 +152,6 @@ a:focus,
 a:hover {
     text-decoration: none;
     color: #5f9f5f;
-}
-
-.bg-black {
-    background-color: #161616 !important;
-}
-
-.bg-primary {
-    background-color: #64a19d !important;
 }
 
 .text-primary {
